Add hosts-file option to isotoma.recipe.squid

--- a/isotoma/recipe/squid/squid.conf
+++ b/isotoma/recipe/squid/squid.conf
@@ -81,3 +81,6 @@ broken_vary_encoding allow apache
 # Squid only knows about standard HTTP requests - allow up to 20 additional methods here
 extension_methods REPORT MERGE MKACTIVITY CHECKOUT
 
+#if getVar('hosts_file', None)
+hosts_file $hosts_file
+#end if
