Add an allowed-domains-file

--- a/isotoma/recipe/squid/squid.conf
+++ b/isotoma/recipe/squid/squid.conf
@@ -28,8 +28,16 @@ acl Connect_Safe_ports port $p
 acl Safe_ports port $p
 #end for
 
+#if $getVar('allowed_domains_file', None)
+acl allowed_domains_file dstdomain "$allowed_domains_file"
+#end if
+
 acl purge method PURGE
 acl CONNECT method CONNECT
+
+#if $getVar('allowed_domains_file', None)
+http_access deny !allowed_domains_file
+#end if
 
 # Only allow cachemgr access from localhost
 http_access allow manager localhost
