Allow extra acl and http_access rules to be added directly from buildout. Don't omit http_access deny (not)localnet if localnet is undefined.

--- a/isotoma/recipe/squid/squid.conf
+++ b/isotoma/recipe/squid/squid.conf
@@ -35,9 +35,19 @@ acl allowed_domains_file dstdomain "$allowed_domains_file"
 acl purge method PURGE
 acl CONNECT method CONNECT
 
+#for $acl in $extra_acl
+acl $acl
+#end for
+
 #if $getVar('allowed_domains_file', None)
 http_access deny !allowed_domains_file
 #end if
+
+#if $localnet
+http_access deny !localnet
+#end if
+
+http_access deny to_localhost
 
 # Only allow cachemgr access from localhost
 http_access allow manager localhost
@@ -53,16 +63,9 @@ http_access deny !Safe_ports
 # Deny CONNECT to other than SSL ports
 http_access deny CONNECT !Connect_Safe_ports
 
-#
-# We strongly recommend the following be uncommented to protect innocent
-# web applications running on the proxy server who think the only
-# one who can access services on "localhost" is a local user
-http_access deny to_localhost
-
-# Example rule allowing access from your local networks.
-# Adapt localnet in the ACL section to list your (internal) IP networks
-# from where browsing should be allowed
-http_access allow localnet
+#for $rule in $extra_http_access
+http_access $rule
+#end for
 
 # And finally deny all other access to this proxy
 http_access deny all
