Change handling of localnet to avoid blocking all access

--- a/isotoma/recipe/squid/squid.conf
+++ b/isotoma/recipe/squid/squid.conf
@@ -43,10 +43,6 @@ acl $acl
 http_access deny !allowed_domains_file
 #end if
 
-#if $localnet
-http_access deny !localnet
-#end if
-
 http_access deny to_localhost
 
 # Only allow cachemgr access from localhost
@@ -67,8 +63,11 @@ http_access deny CONNECT !Connect_Safe_ports
 http_access $rule
 #end for
 
-# And finally deny all other access to this proxy
+#if $localnet
+# If not on our localnet, deny
+http_access allow localnet
 http_access deny all
+#end if
 
 #Allow ICP queries from local networks only
 icp_access allow localnet
