--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,5 +9,6 @@ eggs = isotoma.recipe.squid [test]
 
 [versions]
 zc.buildout = 1.4.3
+distribute = 0.6.21
 zc.recipe.testrunner = 1.3.0
 zc.recipe.egg = 1.2.3b2
