--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install -y -q squid
+
 install:
   - python bootstrap.py
   - ./bin/buildout
